--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,236 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.med-btn-pri {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #00a651;
+  border-radius: 22px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  color: #00a651;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  /* min-height: 20px; */
+  min-width: 0;
+  outline: none;
+  padding: 10px 14px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.med-btn-pri:disabled {
+  pointer-events: none;
+}
+
+.med-btn-pri:hover {
+  color: #f4f4f4 !important;
+  background-color: #00a651;
+  box-shadow: none;
+  transform: translateY(2px);
+}
+
+.med-btn-pri:active {
+  box-shadow: none;
+  transform: translateY(4px);
+}
+
+/* /////////////////////////////////// */
+
+.med-btn-sec {
+  appearance: none;
+  background-color: #00a651;
+  border: 2px solid #00a651;
+  border-radius: 22px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  color: #f4f4f4;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  /* min-height: 20px; */
+  min-width: 0;
+  outline: none;
+  padding: 10px 14px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.med-btn-sec:disabled {
+  pointer-events: none;
+}
+
+.med-btn-sec:hover {
+  color: #00a651 !important;
+  background-color: transparent;
+  box-shadow: 0 0 0.25rem #00000080, -0.125rem -0.125rem 0.5rem #00a65094,
+    0.125rem 0.125rem 0.5rem #00a65094;
+  transform: translateY(2px);
+}
+
+.med-btn-sec:active {
+  box-shadow: none;
+  transform: translateY(4px);
+}
+/* ///////////////////////////// */
+
+.med-btn-pri-sm {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #00a651;
+  border-radius: 22px;
+  box-sizing: border-box;
+  color: #00a651;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  min-width: 0;
+  outline: none;
+  padding: 6px 10px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.med-btn-pri-sm:disabled {
+  pointer-events: none;
+}
+/* ///////////////////////////// */
+
+.med-btn-sec-sm {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #00a651;
+  border-radius: 22px;
+  box-sizing: border-box;
+  color: #00a651;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: normal;
+  margin: 0;
+  min-width: 0;
+  outline: none;
+  padding: 8px 14px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  will-change: transform;
+}
+
+.med-btn-sec-sm:disabled {
+  pointer-events: none;
+}
+
+.med-btn-sec-sm:hover {
+  color: #f4f4f4 !important;
+  background-color: #00a651;
+  box-shadow: none;
+  transform: translateY(2px);
+}
+
+.med-btn-sec-sm:active {
+  box-shadow: none;
+  transform: translateY(4px);
+}
+
+.scrollbar::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
+.scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* med-tbn-3rd light mode */
+.med-btn-3rd {
+  background-color: #00a651;
+  border-radius: 12px;
+  color: #000;
+  cursor: pointer;
+  padding: 10px 15px;
+  text-align: center;
+  transition: 200ms;
+  box-sizing: border-box;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.med-btn-3rd:not(:disabled):hover,
+.med-btn-3rd:not(:disabled):focus {
+  outline: 0;
+  background: #00a651;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+}
+
+.med-btn-3rd:disabled {
+  filter: saturate(0.2) opacity(0.5);
+  -webkit-filter: saturate(0.2) opacity(0.5);
+  cursor: not-allowed;
+}
+
+/* med-tbn-3rd dark mode */
+.med-btn-3rd-dark {
+  background-color: #00a651;
+  border-radius: 12px;
+  color: #000;
+  cursor: pointer;
+  padding: 10px 15px;
+  text-align: center;
+  transition: 200ms;
+  width: 100%;
+  box-sizing: border-box;
+  border: 0;
+  font-size: 16px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.med-btn-3rd-dark:not(:disabled):hover,
+.med-btn-3rd-dark:not(:disabled):focus {
+  outline: 0;
+  background: #00ff7b;
+  box-shadow: 0 0 0 2px rgba(226, 226, 226, 0.24),
+    0 3px 8px 0 rgba(82, 82, 82, 0.15);
+}
+
+.med-btn-3rd-dark:disabled {
+  filter: saturate(0.2) opacity(0.5);
+  -webkit-filter: saturate(0.2) opacity(0.5);
+  cursor: not-allowed;
+}
